[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Flask-Lan"
description = "Flask-Lan is a modernized api suite with schema validator and auto docs"
dynamic = ["version"]
authors = [
    { name = "chaojie", email = "zhuzhezhe95@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "pydantic[email]"
]
keywords = [
    "flask",
    "api",
    "plugin",
    "openapi",
    "validator",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: Flask"
]

[project.urls]
Documentation = "https://ischaojie.github.io/flask-lan/"
Source = "https://github.com/ischaojie/flask-lan"

[tool.hatch.version]
path = "flask_lan/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "flake8",
    "pytest",
    "mypy",
    "black",
    "isort",
    "pytest-cov",
    "mkdocs",
    "mkdocs-material",
    "autoflake",
]

[tool.hatch.envs.default.scripts]
clean = ["git clean"]
check = [
    "flake8 flask_lan tests --max-line-length=90",
    "black --check --diff flask_lan tests",
    "isort --check-only --diff flask_lan tests",
    "mypy flask_lan tests"
]
lint = [
    "autoflake -r flask_lan tests",
    "isort flask_lan tests",
    "black flask_lan tests",
]
test = [
    "pytest tests/ -s --cov=flask_lan --cov-config=pyproject.toml --cov-report=term-missing --cov-report=xml --cov-fail-under=90",
]
report = ["coverage report -m"]
all = ["check", "test"]

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.autoflake]
in-place = true
remove-all-unused-imports = true

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
show_error_codes = true
ignore_missing_imports = true
